feat: add reservation endpoints
