# src/server.ts
@@ -21,6 +21,9 @@ import path from "path";
 import reservationTableRoutes from "./routes/reservationTableRoutes";
 import ReservationTableServices from "./services/ReservationTableService";
 import Table from "./models/Table";
+import reservationRoutes from "./routes/reservationRoutes";
+import ReservationServices from "./services/ReservationServices";
+import Reservation from "./models/Reservation";
 
 const app = express();
 const sharedItemServices = new SharedItemServices(SharedItem);
@@ -28,6 +31,7 @@ const authServices = new AuthServices(User);
 const borrowListServices = new SharedItemBorrowListServices(
   SharedItemBorrowList
 );
+const reservationServices = new ReservationServices(Reservation);
 const reservationTableServices = new ReservationTableServices(Table);
 var sess = {
   secret: "keyboard cat",
@@ -67,6 +71,7 @@ app.use("/api/v1", swaggerRoute);
 app.use("/api/v1/auth", authRoute(authServices));
 app.use("/api/v1", sharedItemRoute(sharedItemServices));
 app.use("/api/v1", sharedItemBorrowListRoute(borrowListServices));
+app.use("/api/v1", reservationRoutes(reservationServices));
 app.use("/api/v1", reservationTableRoutes(reservationTableServices));
 
 // Error handling middleware
